# trabalhos-academicos

./: README.md
AABD/Checkpoint1/: check1.json  script.sql
AABD/Checkpoint2/: propostasChecklist3.txt  tabelas_e_dados.sql  views.sql
AABD/Checkpoint3/: scriptBD.txt  tim_a2022161633.txt
BD/ficheiros/: Modelo_Fisico_Script.txt  Modelo_conceptual_Final_Modificado.cdm
LinguagensScript/codigo/: package.json
LinguagensScript/codigo/public/: index.html
LinguagensScript/codigo/src/: App.css  App.js  index.js
LinguagensScript/codigo/src/components/MainCss/: main.css
LinguagensScript/codigo/src/components/footer/: footer.component.jsx  footer.css
LinguagensScript/codigo/src/components/header/: header.component.jsx  header.css
POO/: Aparelho.cpp  Aparelho.h  CMakeLists.txt  Habitacao.cpp  Habitacao.h  Processador.cpp  Processador.h  Propriedade.cpp  Propriedade.h  Regra.cpp  Regra.h  Sensor.cpp  Sensor.h  Simulacao.cpp  Simulacao.h  Zona.cpp  Zona.h  cmd.cpp  cmd.h  main.cpp  teste.txt  teste2.txt  teste3.txt
Programacao/: linhas.c  linhas.h  main.c  paragens.c  paragens.h  utils.c  utils.h
Programacao/ficheiros teste/: norte2.txt  sul2.txt
SistemasOperativos/: feed.c  makefile  manager.c  utils.h
TWEB/formCalculoPrecoImovel/: estilos-form_preco.css  form_preco.html  js-form_preco.js
TWEB/paginaReplica/: estilos_pagina.css  pagina.html
